--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <h4>Dorobantu Marius</h4>    
               </div>
               <div class="partea-dreapta">
-                  <img src="https://imgtr.ee/images/2023/04/20/05weq.png" 
+                  <img src="/my-profile.png" 
                    alt="portrait_image">
                   <h5 span class="padding-education"></span>IT education</h5>
                   <section class="timeline-bar">
